unwnated code commented

--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
                     <a href="https://www.instagram.com/its__me__pranesh/" target="_blank"><ion-icon name="logo-instagram"></ion-icon></a>
                     <a href="https://www.linkedin.com/in/periasamy-chellamuthu-575491146/" target="_blank"><ion-icon name="logo-linkedin"></ion-icon></a>
                   </div>
-                <a href="#">Hire me</a>
+                <!-- <a href="#">Hire me</a> -->
             </div>
         </div>
     </section>
@@ -66,7 +66,8 @@
                 </div>
                 <div class="column right">
                     <div class="text">I'm Periasamy and I'm a <span class="typing-2"></span></div>
-                    <p>A young motivated village boy who is interested in computer, developing software, learning new and excited technologies decided computer science as his carrier path and turned to be a passionate and pragmatic software Developer.He is also a teacher and gammer who has deep focus towards "Lifelong Learning".He is now looking for the next chapter of his software development carrer. </p>
+                    <p>A young motivated village boy who is interested in computer, developing software, learning new and excited technologies decided computer science as his carrier path and turned to be a passionate and pragmatic software Developer.He is also a teacher and gammer who has deep focus towards "Lifelong Learning". </p>
+                    <!-- He is now looking for the next chapter of his software development carrer. -->
                     <a href="/download/resume.pdf" download="resume">Download CV</a>
                 </div>
             </div>
