cv download and social media links related updates.

--- a/index.html
+++ b/index.html
@@ -46,9 +46,9 @@
                 <div class="text-2">Periasamy Chellamuthu</div>
                 <div class="text-3">And I'm a <span class="typing"></span></div>
                 <div class="social-link">
-                    <a href="https://twitter.com/pranesh07269610" target="_blank"><ion-icon name="logo-twitter"></ion-icon></a>
+                    <a href="https://twitter.com/Periasa36678903" target="_blank"><ion-icon name="logo-twitter"></ion-icon></a>
                     <a href="https://github.com/periasamychellamuthu" target="_blank"><ion-icon name="logo-github"></ion-icon></a>
-                    <a href="https://www.instagram.com/its__me__pranesh/" target="_blank"><ion-icon name="logo-instagram"></ion-icon></a>
+                    <a href="https://www.instagram.com/ravi421a/" target="_blank"><ion-icon name="logo-instagram"></ion-icon></a>
                     <a href="https://www.linkedin.com/in/periasamy-chellamuthu-575491146/" target="_blank"><ion-icon name="logo-linkedin"></ion-icon></a>
                   </div>
                 <!-- <a href="#">Hire me</a> -->
@@ -68,7 +68,7 @@
                     <div class="text">I'm Periasamy and I'm a <span class="typing-2"></span></div>
                     <p>A young motivated village boy who is interested in computer, developing software, learning new and excited technologies decided computer science as his carrier path and turned to be a passionate and pragmatic software Developer.He is also a teacher and gammer who has deep focus towards "Lifelong Learning". </p>
                     <!-- He is now looking for the next chapter of his software development carrer. -->
-                    <a href="/download/resume.pdf" download="resume">Download CV</a>
+                    <a href="https://periasamychellamuthu.github.io/MyPortfolio/download/resume.pdf" download="resume">Download CV</a>
                 </div>
             </div>
         </div>
@@ -339,13 +339,15 @@
                     <div class="blog-item-inner shadow-dark">
                         <div class="blog-img">
                             <img src="images/blog/1.png" alt="blog">
-                            <div class="blog-date">
-                                13 Jul 2020
-                            </div>
                         </div>
                         <div class="blog-info">
-                            <h4 class="blog-title">Getting a MacBook</h4>
-                            <p class="blog-description">It was a big Dream to use a MacBook as my personal computer, for both home and at work since my College Days and still in progression.</p>
+                            <h4 class="blog-title">Task Manager</h4>
+                            <p class="blog-note">This is my first application which incorporated with proper cloud application properties like proper request response handling,proper security filters,session management ,clean coding and seperate client and server section.Used Java,JavaScript,MySql,AJAX.</p>
+                            <p class="blog-description">
+                                This application is used to manage tasks in the organization.This application has different supports for each level of members in
+                                organization.This application provide support to create Team,Assign members to Team(both team leader and worker),create tasks , assign tasks.
+                                Online Members Tracking system implemeted to track the available user.
+                            </p>
                             <div class="project-links">
                                 <button><a href="#">Try It</a></button>
                                 <button><a><ion-icon class="github-ionicon" name="logo-github"></ion-icon></a></button>
@@ -353,40 +355,6 @@
                         </div>
                     </div>
                 </div>
-                <!-- <div class="card">
-                    <div class="box">
-                        <div class="project-text">Task Manager Pro</div>
-                        <div class="project-details">
-                            <p>
-                                <i class="fas fa-hand-point-right"></i> This application is built using java servlets and incorporated AJAX technologies for asynchronous communications.
-                            </p><p>
-                                <i class="fas fa-hand-point-right"></i> Online Members Tracking system implemeted to track the available user.
-                            </p><p>
-                                <i class="fas fa-hand-point-right"></i> This application provides different supports to each level of members in organization.
-                            </p><p>
-                                <i class="fas fa-hand-point-right"></i> This application uses session management system for secure interactions and also incorporated with security filters for every org users secure login and input validation.
-                            </p><p>   
-                                <i class="fas fa-hand-point-right"></i> This application provide support to create Team,Assign members to Team(both team leader and worker),create tasks , assign tasks.</p>
-                            </p>
-                        </div>
-                    </div>
-                </div>
-                <div class="card">
-                    <div class="box">
-                        <div class="project-text">Student Performance Manager</div>
-                        <div class="project-details">
-                            <p>
-                                <i class="fas fa-hand-point-right"></i>&#9758; This application provide support to monitor the performance of every students in college or schools, by using marks.
-                            </p><p>
-                                <i class="fas fa-hand-point-right"></i> This application is usable by both students and teachers.This application is built using node js and incorporated AJAX technologies for asynchronous communications.
-                            </p><p>
-                                <i class="fas fa-hand-point-right"></i> Proper API Framework used for API implementation.Techniques like session Management,encoding ,input validations,routes are used in this application.
-                            </p><p>
-                                <i class="fas fa-hand-point-right"></i> Some useful client components are also incorporated in this application for better usability.
-                            </p>
-                        </div>
-                    </div>
-                </div> -->
             </div>
         </div>
     </section>
