minor updates related to projects division

--- a/index.html
+++ b/index.html
@@ -14,6 +14,7 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/OwlCarousel2/2.3.4/assets/owl.carousel.min.css"/>
     <script type="module" src="https://unpkg.com/ionicons@5.5.2/dist/ionicons/ionicons.esm.js"></script>
     <script nomodule src="https://unpkg.com/ionicons@5.5.2/dist/ionicons/ionicons.js"></script>
+    <script src="script.js"></script>
 
 </head>
 <body>
@@ -338,7 +339,7 @@
                 <div class="card blog-item">
                     <div class="blog-item-inner shadow-dark">
                         <div class="blog-img">
-                            <img src="images/blog/1.png" alt="blog">
+                            <img src="Videos/TaskDesk.gif" alt="blog">
                         </div>
                         <div class="blog-info">
                             <h4 class="blog-title">Task Manager</h4>
@@ -349,7 +350,27 @@
                                 Online Members Tracking system implemeted to track the available user.
                             </p>
                             <div class="project-links">
-                                <button><a href="#">Try It</a></button>
+                                <button disabled><a href="#">Try It</a></button>
+                                <button><a><ion-icon class="github-ionicon" name="logo-github"></ion-icon></a></button>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+                <div class="card blog-item">
+                    <div class="blog-item-inner shadow-dark">
+                        <div class="blog-img">
+                            <img class="animatedgif" src="Videos/MyHotstar.gif" alt="blog">
+                        </div>
+                        <div class="blog-info">
+                            <h4 class="blog-title">My Hotstar Ace</h4>
+                            <p class="blog-note">This is an entertainment application which resembles Hotstar version.We can add our own interested images and video in applications DB so that we can make our own video and image showcases.This application fetches video and image data firebase database and this application completely works in online.</p>
+                            <p class="blog-description">
+                                This application is capable of view videos from online and image showcases by adding corresponding url in DB.
+                                Image Gallery designs like carousels,book view,stack view are incorporated for better visibility.
+                                This application uses stackNavigator,redux store and various components for smooth and advanced working.
+                            </p>
+                            <div class="project-links">
+                                <button><a href="https://snack.expo.dev/@periasamy_c/react-native-hoststar">Try It</a></button>
                                 <button><a><ion-icon class="github-ionicon" name="logo-github"></ion-icon></a></button>
                             </div>
                         </div>
@@ -488,11 +509,25 @@
         </div>
     </section>
 
+    <!-- lightbox content to show popups-->
+    <div class="lightbox">
+		<div class="lightbox-content">
+		  <div class="lightbox-close">&times;</div>
+		  <img src="" class="lightbox-img">
+		  <div class="lightbox-caption">
+			  <div class="caption-text"></div>
+			  <div class="caption-counter"></div>
+		  </div>
+		</div>
+		<div class="lightbox-controls">
+			<div class="prev-item"><i class="fa fa-angle-left"></i></div>
+			<div class="next-item"><i class="fa fa-angle-right"></i></div>
+		</div>
+    </div>
+
     <!-- footer section start -->
     <footer>
         <span>Created By <a href="https://www.codingnepalweb.com">Periasamy Chellamuthu</a> | <span class="far fa-copyright"></span> 2021 All rights reserved.</span>
     </footer>
-
-    <script src="script.js"></script>
 </body>
 </html>
