gif path changes

--- a/index.html
+++ b/index.html
@@ -339,7 +339,7 @@
                 <div class="card blog-item">
                     <div class="blog-item-inner shadow-dark">
                         <div class="blog-img">
-                            <img src="https://github.com/periasamychellamuthu/MyPortfolio/blob/main/Videos/TaskDesk.gif" alt="blog">
+                            <img src="Videos/TaskDesk.gif" alt="blog">
                         </div>
                         <div class="blog-info">
                             <h4 class="blog-title">Task Manager</h4>
@@ -359,7 +359,7 @@
                 <div class="card blog-item">
                     <div class="blog-item-inner shadow-dark">
                         <div class="blog-img">
-                            <img class="animatedgif" src="https://github.com/periasamychellamuthu/MyPortfolio/blob/main/Videos/MyHotstar.gif" alt="blog">
+                            <img class="animatedgif" src="Videos/MyHotstar.gif" alt="blog">
                         </div>
                         <div class="blog-info">
                             <h4 class="blog-title">My Hotstar Ace</h4>
