ionicon to fontawesome changes

--- a/index.html
+++ b/index.html
@@ -47,10 +47,10 @@
                 <div class="text-2">Periasamy Chellamuthu</div>
                 <div class="text-3">And I'm a <span class="typing"></span></div>
                 <div class="social-link">
-                    <a href="https://twitter.com/Periasa36678903" target="_blank"><ion-icon name="logo-twitter"></ion-icon></a>
-                    <a href="https://github.com/periasamychellamuthu" target="_blank"><ion-icon name="logo-github"></ion-icon></a>
-                    <a href="https://www.instagram.com/ravi421a/" target="_blank"><ion-icon name="logo-instagram"></ion-icon></a>
-                    <a href="https://www.linkedin.com/in/periasamy-chellamuthu-575491146/" target="_blank"><ion-icon name="logo-linkedin"></ion-icon></a>
+                    <a href="https://twitter.com/Periasa36678903" target="_blank"><i class="fab fa-twitter col-crimson"></i></a>
+                    <a href="https://github.com/periasamychellamuthu" target="_blank"><i class="fab fa-github col-crimson"></i></a>
+                    <a href="https://www.instagram.com/ravi421a/" target="_blank"><i class="fab fa-instagram col-crimson"></i></a>
+                    <a href="https://www.linkedin.com/in/periasamy-chellamuthu-575491146/" target="_blank"><i class="fab fa-linkedin col-crimson"></i></a>
                   </div>
                 <!-- <a href="#">Hire me</a> -->
             </div>
@@ -403,15 +403,15 @@
                 <div class="card blog-item">
                     <div class="blog-item-inner shadow-dark">
                         <div class="blog-img">
-                            <img src="images/blog/2.png" alt="blog">
+                            <img src="images/sslcImage.png" alt="blog">
                             <div class="blog-date">
-                                20 May 2020
+                                21 Dec 2021
                             </div>
                         </div>
                         <div class="blog-info">
-                            <h4 class="blog-title">Understanding Yourself</h4>
-                            <p class="blog-description">Pandamic time made me to get a clear idea of what I'm doing. That helped me in exprementing things that that I am passionate about.</p>
-                            <p class="blog-tags">Tags : <a href="#">Passionate</a></p>
+                            <h4 class="blog-title">Efforts always pays off</h4>
+                            <p class="blog-description">Viewing our photo on the school's official website is always a good feeling.It just shows your efforts, uniqueness, you are showcase to show school's great and you are like a role model to others. When I saw my profile on my school official website, I just felt proud of myself and I realized that your efforts always pay off.</p>
+                            <p class="blog-tags">Tags : <a href="http://www.ponnuschool.com/sslc.html">School's official Website</a></p>
                         </div>
                     </div>
                 </div>
@@ -425,8 +425,8 @@
                         </div>
                         <div class="blog-info">
                             <h4 class="blog-title">Happy Cycling Days</h4>
-                            <p class="blog-description">Cycling was one of the most important habit, that made me to get connected with nature, people, peace of mind and motivation.</p>
-                            <p class="blog-tags">Tags : <a href="https://chennaicyclists.com/">WCCG</a>, <a href="#">Cycling</a></p>
+                            <p class="blog-description">Most awaited college event.I conducted few fun and technical events with lot of funs, inviting other college friends, seeking sponsorship from companies for events are really good experience.This is one of my most valuable memories of my college.</p>
+                            <!-- <p class="blog-tags">Tags : <a href="https://chennaicyclists.com/">WCCG</a>, <a href="#">Cycling</a></p> -->
                         </div>
                     </div>
                 </div>
