--- a/index.html
+++ b/index.html
@@ -45,10 +45,10 @@
                 <div class="text-2">Periasamy Chellamuthu</div>
                 <div class="text-3">And I'm a <span class="typing"></span></div>
                 <div class="social-link">
-                    <a href="https://twitter.com/Periasa36678903" target="_blank"><i class="fab fa-twitter col-crimson"></i></a>
-                    <a href="https://github.com/periasamychellamuthu" target="_blank"><i class="fab fa-github col-crimson"></i></a>
-                    <a href="https://www.instagram.com/ravi421a/" target="_blank"><i class="fab fa-instagram col-crimson"></i></a>
-                    <a href="https://www.linkedin.com/in/periasamy-chellamuthu-575491146/" target="_blank"><i class="fab fa-linkedin col-crimson"></i></a>
+                    <a href="https://twitter.com/Periasa36678903" title="Twitter" target="_blank"><i class="fab fa-twitter col-crimson"></i></a>
+                    <a href="https://github.com/periasamychellamuthu" title="GitHub" target="_blank"><i class="fab fa-github col-crimson"></i></a>
+                    <a href="https://www.instagram.com/ravi421a/" title="Instagram" target="_blank"><i class="fab fa-instagram col-crimson"></i></a>
+                    <a href="https://www.linkedin.com/in/periasamy-chellamuthu-575491146/" title="LinkedIn" target="_blank"><i class="fab fa-linkedin col-crimson"></i></a>
                   </div>
                 <!-- <a href="#">Hire me</a> -->
             </div>
